refactor User class to use Builder pattern